packages/components/src/styles/components/filter-bar.scss
/**
 * Copyright (c) HashiCorp, Inc.
 * SPDX-License-Identifier: MPL-2.0
 */

//
// FILTER BAR
//

@use "../mixins/focus-ring" as *;

.hds-filter-bar {
  display: grid;
  gap: 8px;
  padding: 8px;
  background-color: var(--token-color-surface-faint);
  border: 1px solid var(--token-color-border-primary);
  border-radius: var(--token-border-radius-medium);
}

.hds-filter-bar__applied-filters-list,
.hds-filter-bar__applied-filters {
  display: contents;
}

.hds-filter-bar__applied-filters-list__content {
  display: flex;
  flex-wrap: wrap;
  gap: 8px 12px;
  align-items: center;
}

.hds-filter-bar__actions__right {
  margin-left: auto;
}

.hds-filter-bar__search {
  --token-form-control-padding: 3px;
  font-size: var(--token-typography-body-100-font-size);
}

// FILTER BAR > DROPDOWN

.hds-filter-bar__dropdown .hds-dropdown__list,
.hds-filter-bar__dropdown .hds-dropdown-list-item {
  padding: 0;
}

// FILTER BAR > TABS

.hds-filter-bar__tabs {
  display: flex;
}

.hds-filter-bar__tabs__list {
  display: flex;
  flex-direction: column;
  gap: 4px;
  width: 50%;
  padding: 8px;
  list-style: none;
  background-color: var(--token-color-surface-faint);
  border-right: 1px solid var(--token-color-border-primary);
  border-top-left-radius: var(--token-border-radius-medium);
}

.hds-filter-bar__tabs__tab {
  list-style: none;
}

.hds-filter-bar__tabs__tab__button {
  @include hds-focus-ring-basic();

  display: flex;
  gap: 16px;
  align-items: center;
  width: 100%;
  padding: 8px 16px;
  color: var(--token-color-foreground-primary);
  text-align: left;
  background-color: transparent;
  border: none;
  border-radius: var(--token-border-radius-x-small);

  &.mock-hover,
  &:hover {
    background-color: var(--token-color-surface-interactive-hover);
    cursor: pointer;
  }

  &.mock-active,
  &:active {
    background-color: var(--token-color-surface-interactive-active);
  }
}

.hds-filter-bar__tabs__tab__text {
  width: 100%;
}

.hds-filter-bar__tabs__tab--is-selected .hds-filter-bar__tabs__tab__button {
  position: relative;
  color: var(--token-color-foreground-action);
  background-color: var(--token-color-surface-strong);

  &::before {
    position: absolute;
    top: 6px;
    left: 4px;
    width: 2px;
    height: 24px;
    background-color: var(--token-color-foreground-action);
    border-radius: 1px;
    content: "";
  }

  &.mock-hover,
  &:hover {
    color: var(--token-color-palette-blue-400);
    background-color: var(--token-color-palette-neutral-200);

    &::before {
      background-color: var(--token-color-palette-blue-400);
    }
  }

  &.mock-active,
  &:active {
    color: var(--token-color-palette-blue-500);
    background-color: var(--token-color-palette-neutral-300);

    &::before {
      background-color: var(--token-color-palette-blue-500);
    }
  }
}

.hds-filter-bar__tabs__panel:not([hidden]) {
  display: flex;
  flex-direction: column;
  gap: 8px;
  width: 50%;
  padding: 16px 0;
  background-color: var(--token-color-surface-primary);
  border-top-right-radius: var(--token-border-radius-medium);
}

// FILTER BAR > FILTER GROUP

.hds-filter-bar__filter-group .hds-form-field--layout-flag {
  padding: 8px 12px;
}

.hds-filter-bar__filter-group__search {
  padding: 0 16px 16px 16px;
  border-bottom: 1px solid var(--token-color-border-primary);
}

.hds-filter-bar__filter-group__list {
  display: flex;
  flex-direction: column;
  gap: 4px;
  margin: 0;
  padding: 0;
  overflow-y: auto;
  border: none;
  overscroll-behavior: contain;
}

.hds-filter-bar__filter-group__fields {
  display: flex;
  flex-direction: column;
  gap: 16px;
  margin: 0;
  padding: 0 16px;
  border: none;

  .hds-filter-bar__filter-group__field,
  .hds-filter-bar__filter-group__field[type="date"],
  .hds-filter-bar__filter-group__field[type="time"] {
    width: 100%;
  }

  .hds-filter-bar__filter-group__field--between[type="date"] {
    // Due to a limitation with the native date input's min-width in Chrome, we need to explicitly set the width.
    width: 130px;
  }
}

.hds-filter-bar__filter-group__selection-option {
  display: flex;
  align-items: self-start;
  padding: 8px 16px;
  color: var(--token-color-foreground-primary);

  &--hidden {
    display: none;
  }

  .hds-filter-bar__filter-group__selection-option__control {
    flex-shrink: 0;
    margin-top: 2px;
    margin-right: 8px;
  }

  // .hds-filter-bar__filter-group__selection-option__label {
  //   display: flex;
  //   flex-grow: 1;
  //   align-items: flex-start;
  //   color: var(--token-color-foreground-primary);
  // }
}

.hds-filter-bar__filter-group__clear:has(~ .hds-filter-bar__filter-group__list) {
  padding: 4px;
}

